--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_width="270dp"
         android:layout_height="56dp"
         android:layout_marginTop="64dp"
-        android:contentDescription="@string/app_name"
+        android:contentDescription="@string/choose_your_minhag"
         android:minHeight="180dp"
         android:padding="5dip"
         android:textSize="25sp"
