--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,10 @@
         android:id="@+id/imageViewAppIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/app_logo"
         app:layout_constraintEnd_toStartOf="@+id/textViewAppTitle"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher_foreground"
-        android:contentDescription="@string/app_logo" />
+        app:srcCompat="@mipmap/ic_launcher_foreground" />
 
     <TextView
         android:id="@+id/textViewAppTitle"
@@ -27,11 +27,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageViewAppIcon" />
 
+    <TextView
+        android:id="@+id/textViewChooseMinhag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
+        android:text="@string/choose_your_minhag"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/spinnerMinhag"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Spinner
         android:id="@+id/spinnerMinhag"
         android:layout_width="270dp"
         android:layout_height="56dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="128dp"
         android:contentDescription="@string/choose_your_minhag"
         android:minHeight="180dp"
         android:padding="5dip"
@@ -58,24 +69,11 @@
         android:id="@+id/buttonCountDown"
         android:layout_width="350dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="186dp"
         android:padding="25dip"
         android:text="@string/start_countdown"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/switchSoundComplete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/switchSoundComplete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:switchPadding="15sp"
-        android:text="@string/play_sound_on_completion"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLookup"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
@@ -90,6 +88,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
