--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="@string/choose_your_minhag"
+        android:text="@string/choose_your_minhag_text_view"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="@+id/textViewAppTitle"
         app:layout_constraintEnd_toEndOf="@+id/spinnerMinhag"
@@ -43,7 +43,7 @@
         android:layout_width="270dp"
         android:layout_height="56dp"
         android:layout_marginEnd="16dp"
-        android:contentDescription="@string/choose_your_minhag"
+        android:contentDescription="@string/minhag_selection"
         android:minHeight="180dp"
         android:padding="5dip"
         android:textSize="25sp"
