--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
-        android:text="@string/choose_your_minhag"
+        android:text="@string/choose_your_minhag_text_view"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/spinnerMinhag"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:layout_width="270dp"
         android:layout_height="56dp"
         android:layout_marginTop="128dp"
-        android:contentDescription="@string/choose_your_minhag"
+        android:contentDescription="@string/minhag_selection"
         android:minHeight="180dp"
         android:padding="5dip"
         android:textSize="25sp"
