--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_logo"
-        app:layout_constraintEnd_toStartOf="@+id/textViewAppTitle"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher_foreground" />
 
@@ -22,35 +22,8 @@
         android:text="@string/app_name"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageViewAppIcon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/imageViewAppIcon"
         app:layout_constraintTop_toTopOf="@+id/imageViewAppIcon" />
-
-    <TextView
-        android:id="@+id/textViewChooseMinhag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        android:text="@string/choose_your_minhag_text_view"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/spinnerMinhag"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Spinner
-        android:id="@+id/spinnerMinhag"
-        android:layout_width="270dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="128dp"
-        android:contentDescription="@string/minhag_selection"
-        android:minHeight="180dp"
-        android:padding="5dip"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewAppIcon" />
 
     <TextView
         android:id="@+id/textViewTime"
@@ -59,21 +32,47 @@
         android:padding="25sp"
         android:textAlignment="center"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCountDown"
+        app:layout_constraintBottom_toTopOf="@+id/textViewChooseMinhag"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerMinhag" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewAppTitle" />
+
+    <TextView
+        android:id="@+id/textViewChooseMinhag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="@string/choose_your_minhag_text_view"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@id/spinnerMinhag"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Spinner
+        android:id="@+id/spinnerMinhag"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_margin="20dp"
+        android:contentDescription="@string/minhag_selection"
+        android:minHeight="180dp"
+        android:padding="5dip"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@id/buttonCountDown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buttonCountDown"
-        android:layout_width="350dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="186dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20sp"
         android:padding="25dip"
         android:text="@string/start_countdown"
         android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/buttonLookup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
@@ -82,7 +81,7 @@
         android:id="@+id/buttonLookup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/lookup_halacha"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
